force-app/main/default/objects/Prospect_Tracking__c/Prospect_Tracking__c.object-meta.xml
<CustomObject>
    <description>Record created when Lead or Contact status changes to MQL</description>
    <label>Prospect Tracking</label>
    <nameField>
        <label>Prospect Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>