force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospect Tracking</relationshipLabel>
    <relationshipName>Prospect_Tracking1</relationshipName>
    <type>Lookup</type>
</CustomField>