force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_AutomationErrors__c.field-meta.xml
<CustomField>
    <fullName>CWS_AutomationErrors__c</fullName>
    <label>Automation Errors</label>
    <type>TextArea</type>
</CustomField>