force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Budget__c.field-meta.xml
<CustomField>
    <fullName>CWS_Budget__c</fullName>
    <label>Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>