force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Business_Needs_Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>CWS_Business_Needs_Pain_Points__c</fullName>
    <label>Business Needs/Pain Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>