force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Calendly_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Calendly_Appointment_Status__c</fullName>
    <label>Calendly Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>Held - Disqualified</fullName>
                <isActive>false</isActive>
                <label>Held - Disqualified</label>
            </value>
            <value>
                <fullName>Held - Pending Status Update</fullName>
                <isActive>false</isActive>
                <label>Held - Pending Status Update</label>
            </value>
            <value>
                <fullName>Held - Recycled</fullName>
                <isActive>false</isActive>
                <label>Held - Recycled</label>
            </value>
            <value>
                <fullName>Held - Sales Accepted</fullName>
                <isActive>false</isActive>
                <label>Held - Sales Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>