force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_CalendlyAnswer1__c.field-meta.xml
<CustomField>
    <fullName>CWS_CalendlyAnswer1__c</fullName>
    <label>Calendly Answer 1</label>
    <type>TextArea</type>
</CustomField>