force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prospect Tracking</relationshipLabel>
    <relationshipName>Prospect_Tracking1</relationshipName>
    <type>Lookup</type>
</CustomField>