force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_DecisionMaker__c.field-meta.xml
<CustomField>
    <fullName>CWS_DecisionMaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker?</label>
    <type>Checkbox</type>
</CustomField>