force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>CWS_ExternalID__c</fullName>
    <label>External ID</label>
    <type>TextArea</type>
</CustomField>