force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>CWS_Fast_Track__c</fullName>
    <formula>IF(ISBLANK( CWS_Contact__c ),  CWS_Lead__r.CWS_Fast_Track__c ,  CWS_Contact__r.CWS_Fast_Track__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fast Track?</label>
    <type>Checkbox</type>
</CustomField>