force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_First_Outbound_By__c.field-meta.xml
<CustomField>
    <fullName>CWS_First_Outbound_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the user that made the first outbound contact attempt to the MQL</inlineHelpText>
    <label>First Outbound By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>First_Outbound_Prospect_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>