force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_FirstOutboundTouchDateTime__c.field-meta.xml
<CustomField>
    <fullName>CWS_FirstOutboundTouchDateTime__c</fullName>
    <label>First_Outbound_Touch_Date_Time__c</label>
    <type>DateTime</type>
</CustomField>