force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_ImplementationTimeframe__c.field-meta.xml
<CustomField>
    <fullName>CWS_ImplementationTimeframe__c</fullName>
    <label>Implementation Timeframe</label>
    <type>TextArea</type>
</CustomField>