force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Industry__c.field-meta.xml
<CustomField>
    <fullName>CWS_Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>MSP/VAR Hybrid</fullName>
            </value>
            <value>
                <fullName>Managed Security</fullName>
            </value>
            <value>
                <fullName>Telecom/Collaboration</fullName>
            </value>
            <value>
                <fullName>Internal IT</fullName>
            </value>
            <value>
                <fullName>Office Technology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Home User</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>Low Voltage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>