force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Lead__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Prospect Tracking</relationshipLabel>
    <relationshipName>Prospect_Tracking1</relationshipName>
    <type>Lookup</type>
</CustomField>