force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_LeadSourceDetailsMostRecent__c.field-meta.xml
<CustomField>
    <fullName>CWS_LeadSourceDetailsMostRecent__c</fullName>
    <label>Lead Source Details - Most Recent</label>
    <type>TextArea</type>
</CustomField>