force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_MQL_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>CWS_MQL_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set when Lead or Contact is updated from Marketo Sync User to someone else by LeanData</description>
    <label>MQL Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospect_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>