force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_MQL_Assignment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_MQL_Assignment_Date_Time__c</fullName>
    <description>Updated when Lead or Contact owner is changed from Marketo User to another user.</description>
    <label>MQL Assignment Date Time</label>
    <type>DateTime</type>
</CustomField>