force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_MQL_Reassigned_By__c.field-meta.xml
<CustomField>
    <fullName>CWS_MQL_Reassigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MQL Reassigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reassigned_Prospect_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>