force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_MQL_Reassigned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_MQL_Reassigned_Date_Time__c</fullName>
    <inlineHelpText>This shows when an MQL was reassigned to a new user.</inlineHelpText>
    <label>MQL Reassigned Date/Time</label>
    <type>DateTime</type>
</CustomField>