force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_MQL_Reassigned_To__c.field-meta.xml
<CustomField>
    <fullName>CWS_MQL_Reassigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MQL Reassigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospect_Tracking_Reassigned</relationshipName>
    <type>Lookup</type>
</CustomField>