force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_MQLDateTime__c.field-meta.xml
<CustomField>
    <fullName>CWS_MQLDateTime__c</fullName>
    <label>MQL Date Time</label>
    <type>DateTime</type>
</CustomField>