force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_of_Employees__c</fullName>
    <label>No. of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>