force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Number_of_Workstations__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Workstations__c</fullName>
    <label># of Workstations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>