force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_NumberOfServersManaged__c.field-meta.xml
<CustomField>
    <fullName>CWS_NumberOfServersManaged__c</fullName>
    <label># of Servers Managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>