force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_NurtureReasonDetails__c.field-meta.xml
<CustomField>
    <fullName>CWS_NurtureReasonDetails__c</fullName>
    <label>Nurture Reason Details</label>
    <type>TextArea</type>
</CustomField>