force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Prospect Tracking (Recurring Opportunity)</relationshipLabel>
    <relationshipName>Prospect_Tracking2</relationshipName>
    <type>Lookup</type>
</CustomField>