force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Persona__c.field-meta.xml
<CustomField>
    <fullName>CWS_Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Executive Assistant</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>IT Manager</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>