force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Set from most recent campaign source field on lead or contact.  Pre-pipeline opportunities will use this as the primary campaign.</description>
    <label>Primary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Prospect Tracking</relationshipLabel>
    <relationshipName>Prospect_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>