force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Product_Interest</valueSetName>
    </valueSet>
</CustomField>