force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_ProspectNotes__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProspectNotes__c</fullName>
    <label>Prospect Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>