force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Reason_for_Self_Gen_PTR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reason_for_Self_Gen_PTR__c</fullName>
    <label>Reason for Self Gen PTR</label>
    <type>TextArea</type>
</CustomField>