force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Recycled_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Recycled_Reason__c</fullName>
    <label>Recycled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Recycled_Reason</valueSetName>
    </valueSet>
</CustomField>