force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_SecondOpportunity__c.field-meta.xml
<CustomField>
    <fullName>CWS_SecondOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Prospect Tracking (Usage Opportunity)</relationshipLabel>
    <relationshipName>Prospect_Tracking3</relationshipName>
    <type>Lookup</type>
</CustomField>