force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_SQL_Pre_Pipeline_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_SQL_Pre_Pipeline_Date_Time__c</fullName>
    <inlineHelpText>This is the date and time that a pre-pipeline opportunity was created for this prospect.</inlineHelpText>
    <label>SQL/Pre-Pipeline Date Time</label>
    <type>DateTime</type>
</CustomField>