force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_SQL_Rejected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_SQL_Rejected_Date_Time__c</fullName>
    <inlineHelpText>This is when the pre-pipeline opportunity was rejected by the Sales Executive</inlineHelpText>
    <label>SQL Rejected Date/Time</label>
    <type>DateTime</type>
</CustomField>