force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_SQL_Working_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_SQL_Working_Date_Time__c</fullName>
    <label>SQL Working Date/Time</label>
    <type>DateTime</type>
</CustomField>