force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_SQO_Accepted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_SQO_Accepted_Date_Time__c</fullName>
    <label>SQO Accepted Date/Time</label>
    <type>DateTime</type>
</CustomField>