force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>SQO Pending</fullName>
            </value>
            <value>
                <fullName>SQO Accepted</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>