force-app/main/default/objects/Prospect_Tracking__c/fields/CWS_Title__c.field-meta.xml
<CustomField>
    <fullName>CWS_Title__c</fullName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>