force-app/main/default/objects/Prospect_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CWS_Expansion_vs_Aquistion__c</columns>
    <columns>CWS_Industry__c</columns>
    <columns>CWS_Region__c</columns>
    <columns>CWS_Primary_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CWS_SecondOpportunity__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>